--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "m_zaremba",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   },
