--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^5.3.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
@@ -25,6 +26,6 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-promise": "^4.2.1",
-    "minimist": ">=1.2.2"
+    "minimist": "^1.2.5"
   }
 }
